--- a/practice_2/tools/dev_tool/tool/Makefile
+++ b/practice_2/tools/dev_tool/tool/Makefile
@@ -20,12 +20,12 @@ WIFI_MOCK_FUNC := wifi_connect wifi_disconnect
 
 mkdir -p $(OUTPUT_PATH)
 
-.PHONY: compile link clean
+.PHONY: clean
 
-compile:
+$(OBJS):
 	$(CC) $(CFLAG) $(addprefix -D,$(MOCK_DEFINE)) $(addprefix -I,$(INC_PATH)) -o $@ $(subst .o,.c,$(notdir $(SOURCES)))
 
-link: $(OBJS)
+$(OUTPUT_PATH)/$(OUTPUT_BIN_NAME):
 	objcpy $(OBJ_PATH)/dev_tool.o $(DEV_TOOL_MOCK_FUNC) $(OBJ_PATH)/dev_tool.o
 	objcpy $(OBJ_PATH)/oled.o $(OLED_MOCK_FUNC) $(OBJ_PATH)/oled.o
 	objcpy $(OBJ_PATH)/audio_core.o $(AUDIO_CORE_MOCK_FUNC) $(OBJ_PATH)/audio_core.o
